--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
 DATABASE_FILE=./data/funshiksha.db
-FRONTEND_ORIGIN=http://localhost:5173
+FRONTEND_ORIGIN=https://funshiksha-15m37499w-shrs-projects-ae461f3f.vercel.app
