Remove localhost fallback from API URL for deployment compatibility

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
 DATABASE_FILE=./data/funshiksha.db
 FRONTEND_ORIGIN=https://funshiksha-15m37499w-shrs-projects-ae461f3f.vercel.app
+VITE_API_URL=http://localhost:5000
